# mpimega

./: CMakeLists.txt  README.md
src/: main.cpp  main_assemble.cpp  main_buildlib.cpp  main_iterate.cpp  main_local_assemble.cpp  main_sdbg_build.cpp  mpimeta  orimain
src/assembly/: bubble_remover.cpp  bubble_remover.h  contig_output.cpp  contig_output.h  contig_stat.h  low_depth_remover.cpp  low_depth_remover.h  sdbg_pruning.cpp  sdbg_pruning.h  tip_remover.cpp  tip_remover.h  unitig_graph.cpp  unitig_graph.h  unitig_graph_vertex.h  weak_link_remover.cpp  weak_link_remover.h
src/iterate/: contig_flank_index.h  kmer_collector.h
src/kmlib/: kmbitvector.h  kmcompactvector.h
src/libbloom/: bloom.h
src/localasm/: hash_mapper.cpp  hash_mapper.h  local_assemble.cpp  local_assemble.h
src/mpienv/: mpienv.cpp  mpienv.hpp
src/sdbg/: sdbg.h  sdbg_raw_content.cpp  sdbg_raw_content.h  sdbg_writer.cpp  sdbg_writer.h
src/sequence/: kmer.h  sequence_package.h  sequence_package_ga.h
src/sequence/io/: async_sequence_reader.h  base_reader.h  binary_reader.h  fastx_reader.cpp  fastx_reader.h  paired_fastx_reader.cpp  paired_fastx_reader.h  sequence_lib.cpp  sequence_lib.h
src/sequence/io/contig/: contig_reader.h  contig_writer.h
src/sequence/io/edge/: edge_io_meta.h  edge_reader.h  edge_writer.h
src/sorting/: base_engine.cpp  base_engine.h  base_engine_ga.cpp  base_engine_ga.h  edge_counter.h  kmer_counter.cpp  kmer_counter.h  kmer_counter_ga.cpp  kmer_counter_ga.h  read_to_sdbg.h  read_to_sdbg_s1.cpp  read_to_sdbg_s2.cpp  seq_base_engine.cpp  seq_base_engine.h  seq_to_sdbg.cpp  seq_to_sdbg.h
src/tools/: filter_by_len.cpp
src/utils/: buffered_reader.h  histgram.h  utils.h
